# xcut

./: AUTHORS  ChangeLog  HelightXu.md  ProjectHome.md  README.md  configure.in  user_guide.md  user_guide_cn.md
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Makefile.am  config.h.in  xcut.c  xcut.h
src/example/: Makefile.in  calculator.c  get_char.c  hash_unittest.c  list.h  list_unittest.c  runtests.c
xcut-0.01/: AUTHORS  Makefile.am  Makefile.in  README  configure
xcut-0.01/autom4te.cache/: output.0  traces.0
xcut-0.01/src/: Makefile.in  xcut.h
xcut-0.01/src/example/: Makefile.am  calculator_test.c  get_char_test.c  hash.c  hash_unittest.c  list_unittest.c  product_database_test.c  runtests.c
xcut-test/: Makefile  hash.h  hash_unittest.c
xcut-test/xcut/: xcut.h
